# reverse_cli_app

./: .gitignore  README.md  conftest.py  pyproject.toml  reverse-tools.example.json  reverse-tools.ps1  reverse-tools.users.example.json
docs/: ARCHITECTURE.md  LANGUAGE_SPLIT.md  PRODUCTION_PROFILE.md
docs/stubs/: common.h  desktop.h  kernel.c.bak  sys.h
docs/superpowers/plans/: 2026-05-22-zriv-auth-demo.md  2026-05-22-zriv-interactive-shell.md
docs/superpowers/specs/: 2026-05-22-interactive-shell-design.md
native/dll_audit/: CMakeLists.txt  README.md  main.c
native/native_probe/: CMakeLists.txt  README.md  main.c
native/perf_scan/: CMakeLists.txt  main.cpp
native/process_memory_reader/: CMakeLists.txt  README.md  main.c
reverse_framework/: __init__.py  api.py  auth.py  cli.py  gui.py  launcher.py  live.py  reporting.py
reverse_framework/analyzers/: __init__.py  code_structure.py  dll_audit.py  elf_header.py  entropy.py  execution_trace.py  external_tools.py  file_profile.py  indicators.py  kernel_security.py  native_probe.py  obfuscation_profile.py  pe_header.py  perf_scan.py  process_memory.py  registry.py  strings.py
reverse_framework/core/: __init__.py  addressing.py  config.py  context.py  models.py  pipeline.py  process_lookup.py
tests/: test_addressing.py  test_api.py  test_auth.py  test_code_structure.py  test_config.py  test_dll_audit.py  test_gui_entrypoint.py  test_indicators.py  test_kernel_security.py  test_launcher.py  test_live.py  test_native_probe.py  test_obfuscation_profile.py  test_perf_scan.py  test_pipeline.py  test_process_lookup.py  test_process_memory.py  test_reporting.py
tmp_dynamic_reports/: execution-evidence.json
tmp_final_reports/: tmp_perf_scan_utf16.bin.json  tmp_perf_scan_utf16.bin.md
tmp_full_reports/: minimal-pe.bin.json  smoke.txt.json
tmp_full_reports_ps1/: minimal-pe.bin.json  minimal-pe.bin.md
tmp_full_reports_ps1b/: minimal-pe.bin.json
tmp_native_reports/: minimal-pe.bin.json
tmp_static_reports/: analysis-input.txt.json
