[project]
name = "reverse-tools"
version = "0.1.0"
description = "A small, plugin-based reverse engineering triage framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
zriv = "reverse_framework.launcher:main"
reverse-tools = "reverse_framework.launcher:main"
reverse-tools-gui = "reverse_framework.launcher:main_gui"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = "_pytest_cache_safe"
addopts = "-p no:cacheprovider"
